--- a/mythicals.css
+++ b/mythicals.css
@@ -1941,10 +1941,18 @@ body.notouch-device #myt_board_tiles .myt_tile_token_spot.selectable:hover {
 
 .myt_tile_tooltip {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.myt_tile_tooltip hr {
+  width: 100%;
 }
 .myt_tile_tooltip .myt_tile {
-  width: 200px;
-  height: 200px;
+  width: 15em;
+  height: 15em;
   border-radius: 30px;
 }
 
